fix gap

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -226,6 +226,7 @@ img {
 	grid-template-columns: repeat(2, 1fr);
 	margin: auto 5rem auto 5rem;
 	width: 100%;
+	gap: 3rem;
 	@media (max-width: 768px) {
 		grid-template-columns: repeat(1, 1fr);
 	}
